fixes fo rhomepage on mobile

--- a/src/assets/_scss/elements/_products.scss
+++ b/src/assets/_scss/elements/_products.scss
@@ -4,6 +4,14 @@
     position: relative;
     height: 0;
     padding-top: 75%;
+    a {
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+    }
     &::after {
       content: '';
       width: 0; 
@@ -28,6 +36,9 @@
       }
     }
   }
+  .product {
+    display: none;
+  }
 }
 
 .wf-active {
@@ -44,9 +55,10 @@
     > div {
       padding-top: 50%;
       &::after {
-      display: none;
-    }
+        display: none;
+      }
       .product {
+        display: block;
         opacity: 0;
         position: absolute;
         background: $white;
